Fix text overlapping button

--- a/root/static/styles/extra/banner.less
+++ b/root/static/styles/extra/banner.less
@@ -12,7 +12,7 @@
 
     p {
         margin: 0;
-        margin-right: @form-margin;
+        margin-right: @form-margin + @form-icon-size;
     }
 
     .dismiss-banner {
